--- a/Base64Encode/Base64Encode.csproj
+++ b/Base64Encode/Base64Encode.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4E81349C-393D-4446-87EB-1BA20E85502C}</ProjectGuid>
+    <ProjectGuid>{CF8400CB-7FD1-4929-99BA-5FBD19B43AFB}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>自定义泛型1</RootNamespace>
-    <AssemblyName>自定义泛型1</AssemblyName>
+    <RootNamespace>Base64Encode</RootNamespace>
+    <AssemblyName>Base64Encode</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -47,9 +47,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="jiqiren.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
